# weedesktop

./: Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs  weechat.rs
src/platform/: macos.rs  mod.rs  unix.rs
src/weechat/: callbacks.rs  hdata.rs  macros.rs  mod.rs
weedesktop_macro/: Cargo.toml
weedesktop_macro/src/: ffi.rs  lib.rs
