[package]
name = "weedesktop"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]

[lib]
name = "weedesktop"
crate-type = ["dylib"]

[dependencies]
cfg-if = "*"
libc = "*"
weedesktop_macro = { path = "weedesktop_macro" }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dbus = "*"

[target.'cfg(target_os = "macos")'.dependencies]

[build-dependencies]
bindgen = "*"
